--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
-language:node_js
+language: node_js
 node_js:
   - "8"
-dist:trusty
+dist: trusty
 services:
   - mongodb
   - redis-server
 env:
-  - Node_ENV=ci PORT=3000
+  - NODE_ENV=ci PORT=3000
 cache:
-directories:
-  - node_modules
-  - client/node_modules
-  install:
-   - npm install
-   - npm run build
+  directories:
+    - node_modules
+    - client/node_modules
+install:
+  - npm install
+  - npm run build
 script:
   - nohup npm run start &
   - sleep 3
